# news

news/: db.sqlite3  pyproject.toml
news/accounts/: admin.py  forms.py  models.py  urls.py  views.py
news/accounts/migrations/: 0001_initial.py
news/articles/: models.py  urls.py  views.py
news/articles/migrations/: 0001_initial.py
news/newspaper_project/: settings.py  urls.py
news/pages/: tests.py
news/templates/: article_delete.html  article_detail.html  article_edit.html  article_list.html  article_new.html  base.html  home.html
news/templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
